css/styles.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Poppins:wght@400;500;600&family=Ubuntu:wght@400;500;700&display=swap");
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Montserrat", sans-serif;
    font-family: "Poppins", sans-serif;
    font-family: "Ubuntu", sans-serif;
    /* background-color: #151515; */
    background-color: transparent;
    color: #ffff;
}

h1 {
    font-size: 6rem;
    font-weight: 600;
    font-family: "Ubuntu", sans-serif;
}
p {
    font-size: 20px;
    /* margin-top: 50px; */
    color: grey;
}
h4 {
    font-size: 2.4rem;
    font-weight: 500;
}

a {
    text-decoration: none;
}
body {
    background-color: #151515;
}

.section {
    display: flex;
    flex-direction: row;
    /* rehkmansa
    
        used margin over padding to space content inwards, as a result there was a down overflow
        prefer padding over margin for spacing content 

        use margin to shift content away, and padding to space content

        so you have two elements close to each other, space them with margin

        you have a box that needs some spacing maybe from parent or from its child

        you can give the parent of the box padding... so here.. padding can goto body, so as to box section...
        or give padding to section so as to box its children....
    */
    padding: 100px 150px;
    padding-bottom: 0;
    /* 
        you had overflow hidden without specifying height... whenever you give overflow, specify dimensions youu want

        by default width is often 100% or auto... always often auto
        height is auto
        auto here means, take as much as you need, similar to 100%,
        100% references the parent.. as much height/width as of the parent you need
        so if parent has no width or height set 100% of auto === auto
    */
    overflow: hidden;
    height: 100vh;
}
.full-name {
    font-size: 63px;
    line-height: 63px;
}
.profile {
    font-size: 24px;
    line-height: 2rem;
    margin-top: 10px;
}
.who-i-am {
    margin: 50px 30px 50px 0;
    line-height: 2rem;
    font-size: 16px;
}
.first-half-section {
    width: 50%;
    margin-right: 100px;
}

.first-half-section__box {
    margin: 60px 0 30px 0;
}
.flex1 {
    display: flex;
    flex-direction: baseline;
    gap: 10px;
}
.no1,
.project-name {
    font-size: 15px;
    font-weight: 700;
    line-height: 15px;
}
.line {
    display: block;
    margin-top: 7px;
    width: 70px;
    height: 1px;
    background-color: white;
}

.socials {
    display: flex;
    flex-direction: row;
    gap: 20px;
    margin: 90px 0 0 0;
    align-items: center;
}

.socials-icon-names {
    display: flex;
    flex-direction: row;
    gap: 7px;
}
.socials-icon-names .uil {
    font-size: 22px;
}
.socials-name {
    margin: 0;
}

/* Second Half */
.second-half-section {
    width: 50%;
    /*  
    rehkmansa
        added scroll behavior of smooth... not needed though, now...
        you have two problems... a scrollbar not positioned at position x
        you can hide the scrollbar... but naaaa


        i'm creating a second branch... check it out
    */
    scroll-behavior: smooth;
    overflow: auto;
    height: 100%;
}
.top-section,
.github,
.live-projects {
    display: flex;
    flex-direction: row;
    align-items: center;
}
.top-section {
    /* gap: 50%; */
    justify-content: space-between;
    align-items: center;
}
.live-projects {
    display: flex;
    flex-direction: row;
    align-items: center;
    /* justify-content: space-between; */
}
.uil-arrow,
.github-projects {
    font-size: 25px;
}
.uil-arrow-right {
    font-size: 25px;
}

.github-container {
    background-color: #202022;
    width: 100%;
    /* height: 100%; */
    /* position: absolute; */
    padding: 40px;
    margin: 10px 0px 0px 0px;
}
.language {
    font-size: 10px;
    line-height: 15px;
    font-weight: 700;
    color: #f5f5fa;
    letter-spacing: 2px;
    margin: 10px 0px 10px 0;
    text-transform: uppercase;
}
.project-name2 {
    font-size: 30px;
    line-height: 30px;
    font-weight: 700;
    margin: 10px 0px 20px 0px;
}
.meta-date,
.meta-github {
    display: flex;
    flex-direction: row;
}
.meta-date {
    gap: 20px;
    margin: 20px 0 20px 0;
}
.meta-github {
    align-items: center;
    gap: 3px;
}
.meta-github-h2 {
    color: grey;
    font-weight: 400;
}
.meta-github-h2,
.uil-code-branch {
    font-size: 14px;
    font-weight: 700;
    line-height: 21px;
}

